--- a/SmileViewController/SmileViewController.xib
+++ b/SmileViewController/SmileViewController.xib
@@ -1,120 +1,71 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <development version="7000" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SmileViewController">
             <connections>
                 <outlet property="previewView" destination="gCm-ut-r28" id="L3v-dR-WoF"/>
-                <outlet property="retakePhotoButton" destination="tbf-ym-c8B" id="odb-av-Exk"/>
-                <outlet property="shareViaFacebookButton" destination="E77-PY-3jg" id="cmO-UP-0yK"/>
-                <outlet property="shareViaInstagramButton" destination="fsv-fX-YaU" id="7LR-6P-Oru"/>
-                <outlet property="shareViaTwitterButton" destination="MQt-BF-6Xb" id="T1w-dy-HOF"/>
+                <outlet property="retakePhotoButton" destination="cP9-2M-ldv" id="gr4-jR-pvF"/>
+                <outlet property="showFrontCameraButton" destination="EOV-0S-cNV" id="A8C-NC-b7x"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gCm-ut-r28">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="550"/>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EOV-0S-cNV">
-                    <rect key="frame" x="5" y="5" width="108" height="30"/>
+                    <rect key="frame" x="10" y="10" width="30" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="4PB-RO-xEN"/>
-                        <constraint firstAttribute="width" constant="108" id="gVK-zV-0Qk"/>
+                        <constraint firstAttribute="width" constant="30" id="bFp-N9-VGQ"/>
+                        <constraint firstAttribute="height" constant="30" id="cJL-lH-7LB"/>
                     </constraints>
-                    <state key="normal" title="Change camera">
-                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <state key="normal">
+                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="showFrontCamera:" destination="-1" eventType="touchUpInside" id="byx-EK-yg4"/>
                     </connections>
                 </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TgQ-vh-YLn">
-                    <rect key="frame" x="0.0" y="550" width="600" height="50"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tbf-ym-c8B">
-                            <rect key="frame" x="300" y="10" width="150" height="30"/>
-                            <state key="normal">
-                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            </state>
-                            <connections>
-                                <action selector="retakePhotoButtonPressed:" destination="-1" eventType="touchUpInside" id="0Vr-YA-lJt"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MQt-BF-6Xb">
-                            <rect key="frame" x="0.0" y="10" width="150" height="30"/>
-                            <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
-                            <state key="normal">
-                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            </state>
-                            <connections>
-                                <action selector="shareViaTwitter:" destination="-1" eventType="touchUpInside" id="Ycb-dL-r88"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E77-PY-3jg">
-                            <rect key="frame" x="150" y="10" width="150" height="30"/>
-                            <state key="normal">
-                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            </state>
-                            <connections>
-                                <action selector="shareViaFacebook:" destination="-1" eventType="touchUpInside" id="Fhj-nP-Xce"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fsv-fX-YaU">
-                            <rect key="frame" x="450" y="10" width="150" height="30"/>
-                            <state key="normal">
-                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            </state>
-                            <connections>
-                                <action selector="shareViaInstagram:" destination="-1" eventType="touchUpInside" id="G8O-e7-Vpp"/>
-                            </connections>
-                        </button>
-                    </subviews>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cP9-2M-ldv">
+                    <rect key="frame" x="335" y="10" width="30" height="30"/>
                     <constraints>
-                        <constraint firstItem="fsv-fX-YaU" firstAttribute="leading" secondItem="tbf-ym-c8B" secondAttribute="trailing" id="5SA-dY-cBT"/>
-                        <constraint firstAttribute="bottom" secondItem="MQt-BF-6Xb" secondAttribute="bottom" constant="10" id="F1m-ua-7co"/>
-                        <constraint firstAttribute="height" constant="50" id="GCJ-Hw-sPI"/>
-                        <constraint firstItem="MQt-BF-6Xb" firstAttribute="leading" secondItem="TgQ-vh-YLn" secondAttribute="leading" id="GF2-sc-EEv"/>
-                        <constraint firstAttribute="bottom" secondItem="tbf-ym-c8B" secondAttribute="bottom" constant="10" id="KTB-Rk-F31"/>
-                        <constraint firstItem="tbf-ym-c8B" firstAttribute="width" secondItem="MQt-BF-6Xb" secondAttribute="width" id="MTP-Oe-rI3"/>
-                        <constraint firstItem="tbf-ym-c8B" firstAttribute="leading" secondItem="E77-PY-3jg" secondAttribute="trailing" id="TJb-xX-w11"/>
-                        <constraint firstAttribute="bottom" secondItem="fsv-fX-YaU" secondAttribute="bottom" constant="10" id="TVQ-Rs-aBR"/>
-                        <constraint firstItem="fsv-fX-YaU" firstAttribute="top" secondItem="TgQ-vh-YLn" secondAttribute="top" constant="10" id="Xcf-Yd-Ak8"/>
-                        <constraint firstAttribute="trailing" secondItem="fsv-fX-YaU" secondAttribute="trailing" id="adX-uA-cX3"/>
-                        <constraint firstItem="fsv-fX-YaU" firstAttribute="width" secondItem="MQt-BF-6Xb" secondAttribute="width" id="d2P-Gn-upO"/>
-                        <constraint firstItem="tbf-ym-c8B" firstAttribute="top" secondItem="TgQ-vh-YLn" secondAttribute="top" constant="10" id="fPp-SN-Szv"/>
-                        <constraint firstAttribute="bottom" secondItem="E77-PY-3jg" secondAttribute="bottom" constant="10" id="kxQ-OU-K08"/>
-                        <constraint firstItem="MQt-BF-6Xb" firstAttribute="top" secondItem="TgQ-vh-YLn" secondAttribute="top" constant="10" id="o70-OZ-9ND"/>
-                        <constraint firstItem="E77-PY-3jg" firstAttribute="width" secondItem="MQt-BF-6Xb" secondAttribute="width" id="saE-Dk-SHW"/>
-                        <constraint firstItem="E77-PY-3jg" firstAttribute="top" secondItem="TgQ-vh-YLn" secondAttribute="top" constant="10" id="tFC-St-fOG"/>
-                        <constraint firstItem="E77-PY-3jg" firstAttribute="leading" secondItem="MQt-BF-6Xb" secondAttribute="trailing" id="ywm-lb-CYR"/>
+                        <constraint firstAttribute="height" constant="30" id="72L-3c-qMk"/>
+                        <constraint firstAttribute="width" constant="30" id="jyv-Do-BBX"/>
                     </constraints>
-                </view>
+                    <state key="normal">
+                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="retakePhotoButtonPressed:" destination="-1" eventType="touchUpInside" id="sbM-qb-foY"/>
+                    </connections>
+                </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="EOV-0S-cNV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="5" id="6iW-RG-Fm5"/>
-                <constraint firstItem="TgQ-vh-YLn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ADk-tJ-7Nf"/>
-                <constraint firstItem="gCm-ut-r28" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="DcG-n0-8C3"/>
-                <constraint firstAttribute="trailing" secondItem="TgQ-vh-YLn" secondAttribute="trailing" id="PoI-hh-wWu"/>
-                <constraint firstItem="TgQ-vh-YLn" firstAttribute="top" secondItem="gCm-ut-r28" secondAttribute="bottom" id="TQ8-xp-y4h"/>
-                <constraint firstAttribute="trailing" secondItem="gCm-ut-r28" secondAttribute="trailing" id="ToC-XU-qdh"/>
-                <constraint firstItem="EOV-0S-cNV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="5" id="VB7-MG-5UG"/>
-                <constraint firstItem="gCm-ut-r28" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="v2j-rd-kTa"/>
-                <constraint firstAttribute="bottom" secondItem="TgQ-vh-YLn" secondAttribute="bottom" id="vX1-xn-M7z"/>
+                <constraint firstItem="cP9-2M-ldv" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="10" id="Obu-wu-9SU"/>
+                <constraint firstItem="gCm-ut-r28" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="XaA-zS-YUF"/>
+                <constraint firstItem="EOV-0S-cNV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="Ydw-1c-QbX"/>
+                <constraint firstAttribute="bottom" secondItem="gCm-ut-r28" secondAttribute="bottom" id="Za0-Aw-dVe"/>
+                <constraint firstItem="gCm-ut-r28" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="hDn-MX-Nio"/>
+                <constraint firstItem="EOV-0S-cNV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="10" id="ip5-Gd-0Dw"/>
+                <constraint firstAttribute="trailing" secondItem="cP9-2M-ldv" secondAttribute="trailing" constant="10" id="z9O-1o-gfZ"/>
+                <constraint firstAttribute="trailing" secondItem="gCm-ut-r28" secondAttribute="trailing" id="zmG-to-coE"/>
             </constraints>
             <modalFormSheetSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-536" y="-57"/>
+            <point key="canvasLocation" x="-1152" y="-122"/>
         </view>
     </objects>
 </document>
